# openkrill-adapters

./: pyproject.toml
openkrill_adapters/: __init__.py  base.py  registry.py
openkrill_adapters/agent/: __init__.py  adapter.py  autogen_bridge.py  crewai_bridge.py  langchain_bridge.py  protocol.py
openkrill_adapters/api/: __init__.py  adapter.py
openkrill_adapters/bridge/: __init__.py  main.py  session_manager.py  skill.py
openkrill_adapters/claude_code/: __init__.py  adapter.py
openkrill_adapters/cli/: __init__.py  adapter.py  session_adapter.py
openkrill_adapters/codex/: __init__.py  adapter.py
openkrill_adapters/discord/: __init__.py  adapter.py
openkrill_adapters/image/: __init__.py  adapter.py
openkrill_adapters/openclaw/: __init__.py  adapter.py
openkrill_adapters/opencode/: __init__.py  adapter.py
openkrill_adapters/slack/: __init__.py  adapter.py
openkrill_adapters/telegram/: __init__.py  adapter.py
openkrill_adapters/web/: __init__.py  adapter.py  login_helper.py  site_driver.py
openkrill_adapters/web/sites/: __init__.py  chatgpt.py  deepseek.py  gemini.py
openkrill_adapters/wechat/: __init__.py  adapter.py
