[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openkrill-adapters"
version = "0.1.0"
description = "OpenKrill adapter ecosystem - pluggable AI & social media adapters"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
api = ["anthropic>=0.40", "openai>=1.50"]
cli = ["websockets>=13"]
web = ["playwright>=1.40"]
all = ["openkrill-adapters[api,cli,web]"]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.entry-points."openkrill.adapters"]
api = "openkrill_adapters.api:ApiAdapter"
cli = "openkrill_adapters.cli:CliAdapter"

[tool.hatch.build.targets.wheel]
packages = ["openkrill_adapters"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
